# mtproto-satori

./: .gitignore  README.md  pyproject.toml
src/mtproto_satori/: __init__.py  __main__.py  const.py  emoji.py  message_receive.py  message_send.py  storage.py  user.py
