[project]
name = "mtproto-satori"
version = "0.1.0"
description = "A Satori implementation based on MTProto."
readme = "README.md"
authors = [
    { name = "su226", email = "thesu226@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "kurigram>=2.2.22",
    "pillow>=12.2.0",
    "puremagic>=2.2.0",
    "satori-python-core>=1.3.2,!=1.3.3",
    "satori-python-server>=1.3.2,!=1.3.3",
    "tgcrypto>=1.2.5",
]

[project.scripts]
mtproto-satori = "mtproto_satori.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
indent-width = 2

[tool.pyright]
typeCheckingMode = "standard"
